--- a/.github/workflows/schedule.yml
+++ b/.github/workflows/schedule.yml
@@ -1,10 +1,12 @@
 name: Update gist
+
 on:
   push:
     branches:
       - master
   schedule:
-    - cron: "0 0 * * *"
+    # runs at 16 AM UTC (About 24:00 UTC+8)
+    - cron: "0 16 * * *"
 
 jobs:
   update-gist:
